fixed padding whitespace for main section

--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -345,7 +345,10 @@
 
 .gsa-usa-section {
   // adjust padding for top of main section - CJB
-  padding-top: 32px;
+  padding-top: 30px;
+  // adjust padding for mobile to balance whitespace - CJB
+  padding-right: 10px;
+  padding-left: 1opx;
 }
 
 .search-link {
